# halo-ai

./: .SRCINFO  .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PKGBUILD  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh.md  SECURITY.md  install.sh  meek_quotes.json  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
agent/: halo-agent.py  message_bus.py
arcade/: README.md
assets/: family-prompts.md  halo_quotes.json
configs/: Caddyfile  Caddyfile.example  Caddyfile.template  amp_quotes.json  bounty_quotes.json  echo_quotes.json  index-new.html  index.html  profiles.json  prometheus.yml  rocm.env
dashboard-api/: main.py  requirements.txt
dashboard-ui/: entrypoint.sh  package-lock.json  package.json  profiles.html  setup-wizard.html  tutorials.html  voice-talent.html
discord-bots/: .env.example  amp_bot.py  bot_base.py  bounty_bot.py  echo_bot.py  echo_digest.py  echo_reddit_browser.py  echo_reddit_login.py  generate_demos.sh  halo_bot.py  launch.py  mechanic_bot.py  meek_bot.py  muse_bot.py  reddit_bridge.py  requirements.txt  set_avatars.py  setup_channels.py  setup_roles.py  setup_server.py
docs/: AGENTS.md  ARCHITECTURE.md  AUTO-REPAIR-DEMO.md  AUTONOMOUS-PIPELINE.md  BLUEPRINTS.md  KANSAS-CITY-SHUFFLE.md  SCREENSHOTS.md  SECURITY.md  SERVICES.md  STACK-PROTECTION.md  TROUBLESHOOTING.md  USB-PORTABLE.md  VOXEL-ENGINE.md  VPN.md
man-cave/: cave.py
scripts/: build-all.sh  halo-thaw.sh  (+23 more)
(+95 files in other folders)
